--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,14 @@ packages = [{include = "simplify_deployment", from = "src"}]
 python = "^3.9"
 numpy = "^1.26.4"
 pandas = "^2.2.2"
+pyarrow = "^16.1.0"
+matplotlib = "^3.9.0"
+typer = "^0.12.3"
+pre-commit = "^3.7.1"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
 
 [build-system]
 requires = ["poetry-core"]
