--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ matplotlib = "^3.9.0"
 typer = "^0.12.3"
 pre-commit = "^3.7.1"
 
+[tool.black]
+line-length = 80
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
