--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pyarrow = "^16.1.0"
 matplotlib = "^3.9.0"
 typer = "^0.12.3"
 pre-commit = "^3.7.1"
+scipy = "^1.13.1"
+pydantic = "^2.7.3"
 
 [tool.black]
 line-length = 80
