--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ typer = "^0.12.3"
 pre-commit = "^3.7.1"
 scipy = "^1.13.1"
 pydantic = "^2.7.3"
+scikit-learn = "^1.5.0"
 
 [tool.black]
 line-length = 80
