--- a/src/simplify_deployment/config/config_filters.yaml
+++ b/src/simplify_deployment/config/config_filters.yaml
@@ -2,9 +2,47 @@
   period_hours: 24
   columns: 
     - siCumulative
-    - nrvCumulative
-    - nrvCumulative
 - kind: band_pass
   period_hours: 12
+  columns: 
+    - siCumulative
+- kind: band_pass
+  period_hours: 1
+  columns: 
+    - siCumulative
+- kind: band_pass
+  period_hours: 0.25
+  columns: 
+    - siCumulative
+- kind: low_pass
+  period_hours: 24
+  columns: 
+    - siCumulative
+- kind: low_pass
+  period_hours: 12
+  columns: 
+    - siCumulative
+- kind: low_pass
+  period_hours: 1
+  columns: 
+    - siCumulative
+- kind: low_pass
+  period_hours: 0.25
+  columns: 
+    - siCumulative
+- kind: high_pass
+  period_hours: 24
+  columns: 
+    - siCumulative
+- kind: high_pass
+  period_hours: 12
+  columns: 
+    - siCumulative
+- kind: high_pass
+  period_hours: 1
+  columns: 
+    - siCumulative
+- kind: high_pass
+  period_hours: 0.25
   columns: 
     - siCumulative
