--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
       rev: 5.13.2
       hooks:
           - id: isort
+            args: ["--profile", "black"]
     - repo: https://github.com/myint/autoflake
       rev: v2.3.1
       hooks:
