--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ scikit-learn = "^1.5.0"
 [tool.black]
 line-length = 80
 
+[tool.isort]
+profile = "black"
+
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
 
