--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ scikit-learn = "^1.5.0"
 [tool.isort]
 profile = "black"
 multi_line_output = 3
+line_length = 80
 
 [tool.black]
 line-length = 80
