--- a/src/simplify_deployment/config/lag_25.yaml
+++ b/src/simplify_deployment/config/lag_25.yaml
@@ -67,10 +67,19 @@ minute:
     min_lag: 25
     max_lag: 2880
 quarter:
-  France_Export:
-    min_lag: 25
+  sI_MW:
+    min_lag: 40
     max_lag: 2880
-
+  loaD_ID_MW:
+    min_lag: -50
+    max_lag: 2880
+  dsO_ID_MW:
+    min_lag: -50
+    max_lag: 2880
+  xB_ID_MW:
+    min_lag: -50
+    max_lag: 2880
+  
   
 
 
