--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ pre-commit = "^3.7.1"
 scipy = "^1.13.1"
 pydantic = "^2.7.3"
 scikit-learn = "^1.5.0"
+plotly = "^5.22.0"
+nbformat = "^5.10.4"
+ipykernel = "^6.29.3"
 
 [tool.isort]
 profile = "black"
