--- a/src/simplify_deployment/config/lag_25_lots_of_vars.yaml
+++ b/src/simplify_deployment/config/lag_25_lots_of_vars.yaml
@@ -315,6 +315,80 @@ minute:
         period_hours: 0.083
       - kind: high_pass
         period_hours: 0.083
+  'IGCC-':
+      min_lag: 25
+      max_lag: 2880
+      transformations:
+        - first_derivative
+        - second_derivative
+        - cumsum_during_quarter
+      filters:
+      - kind: band_pass
+        period_hours: 2207.7
+      - kind: low_pass
+        period_hours: 2207.7
+      - kind: high_pass
+        period_hours: 2207.7
+      - kind: band_pass
+        period_hours: 1103.88
+      - kind: low_pass
+        period_hours: 1103.88
+      - kind: high_pass
+        period_hours: 1103.88
+      - kind: band_pass
+        period_hours: 169.82
+      - kind: low_pass
+        period_hours: 169.82
+      - kind: high_pass
+        period_hours: 169.82
+      - kind: band_pass
+        period_hours: 84.9
+      - kind: low_pass
+        period_hours: 84.9
+      - kind: high_pass
+        period_hours: 84.9
+      - kind: band_pass
+        period_hours: 24
+      - kind: low_pass
+        period_hours: 24
+      - kind: high_pass
+        period_hours: 24
+      - kind: band_pass
+        period_hours: 12
+      - kind: low_pass
+        period_hours: 12
+      - kind: high_pass
+        period_hours: 12
+      - kind: band_pass
+        period_hours: 4.8
+      - kind: low_pass
+        period_hours: 4.8
+      - kind: high_pass
+        period_hours: 4.8
+      - kind: band_pass
+        period_hours: 1.09
+      - kind: low_pass
+        period_hours: 1.09
+      - kind: high_pass
+        period_hours: 1.09
+      - kind: band_pass
+        period_hours: 0.99
+      - kind: low_pass
+        period_hours: 0.99
+      - kind: high_pass
+        period_hours: 0.99
+      - kind: band_pass
+        period_hours: 0.96
+      - kind: low_pass
+        period_hours: 0.96
+      - kind: high_pass
+        period_hours: 0.96
+      - kind: band_pass
+        period_hours: 0.92
+      - kind: low_pass
+        period_hours: 0.92
+      - kind: high_pass
+        period_hours: 0.92
 quarter:
   loaD_ID_MW:
     min_lag: -50
