--- a/src/simplify_deployment/config/lag_25_lots_of_vars.yaml
+++ b/src/simplify_deployment/config/lag_25_lots_of_vars.yaml
@@ -389,6 +389,38 @@ minute:
         period_hours: 0.92
       - kind: high_pass
         period_hours: 0.92
+  'Positive imbalance price':
+      min_lag: 25
+      max_lag: 2880
+      transformations:
+        - first_derivative
+        - second_derivative
+        - cumsum_during_quarter
+      filters:
+      - kind: band_pass
+        period_hours: 24
+      - kind: low_pass
+        period_hours: 24
+      - kind: high_pass
+        period_hours: 24
+      - kind: band_pass
+        period_hours: 12
+      - kind: low_pass
+        period_hours: 12
+      - kind: high_pass
+        period_hours: 12
+      - kind: band_pass
+        period_hours: 1.09
+      - kind: low_pass
+        period_hours: 1.09
+      - kind: high_pass
+        period_hours: 1.09
+      - kind: band_pass
+        period_hours: 0.92
+      - kind: low_pass
+        period_hours: 0.92
+      - kind: high_pass
+        period_hours: 0.92
 quarter:
   loaD_ID_MW:
     min_lag: -50
