--- a/azure/kfold_pipeline_parallel.yaml
+++ b/azure/kfold_pipeline_parallel.yaml
@@ -1,16 +1,16 @@
 $schema: https://azuremlschemas.azureedge.net/latest/pipelineJob.schema.json
 type: pipeline
-display_name: "s1 vars 1 gens parallel"
+display_name: "s1 vars 50 gens parallel"
 experiment_name: test_pipeline
 settings:
   default_compute: serverless
 inputs:
   path_minute_data: 
     type: uri_file
-    path: "/home/thomas/repos/simplify_deployment/data/lots_of_vars/minute_data.parquet"
+    path: "/home/thomas/repos/simplify_deployment/data/simplify_1_0/s1_minute_data.parquet"
   path_qh_data:
     type: uri_file
-    path: "/home/thomas/repos/simplify_deployment/data/lots_of_vars/quarter_data.parquet"
+    path: "/home/thomas/repos/simplify_deployment/data/simplify_1_0/s1_quarter_data.parquet"
   path_config:
     type: uri_file
     path: "/home/thomas/repos/simplify_deployment/src/simplify_deployment/config/lag_25.yaml"
@@ -36,10 +36,10 @@ jobs:
     inputs:
       path_minute_data:
         type: uri_file
-        path: "/home/thomas/repos/simplify_deployment/data/lots_of_vars/minute_data.parquet"
+        path: ${{parent.inputs.path_minute_data}}
       path_qh_data:
         type: uri_file
-        path: "/home/thomas/repos/simplify_deployment/data/lots_of_vars/quarter_data.parquet"
+        path: ${{parent.inputs.path_qh_data}}
     outputs:
       path_to_save_folds:
         type: uri_folder
