--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ scikit-learn = "^1.5.0"
 plotly = "^5.22.0"
 nbformat = "^5.10.4"
 ipykernel = "^6.29.3"
+torch = "^2.4.1"
 
 [tool.isort]
 profile = "black"
